2008-10-22	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-client.c: Handle the SmProcessID property
	  correctly.

2008-10-22	Brian Tarricone <bjt23@cornell.edu>

	* settings/session-editor.c: Fix a couple memleaks and a typo
	  that causes operations on clients to fail.

2008-10-21	Brian Tarricone <bjt23@cornell.edu>

	* settings/session-editor.c: Cache the DBusGProxy in the list
	  store.  Set clients to kill to SmRestartIfRunning, not
	  SmRestartNever.  Display placeholder text if the app doesn't
	  provide a SmProgram property.  Fix a one-time memleak.

2008-10-20	Brian Tarricone <bjt23@cornell.edu>

	* settings/session-editor.c: Implement a rudimentary session
	  editor.  Still a lot more to do.
	* settings/xfce4-session-marshal.list: Add marshallers for dbus
	  signals.
	* settings/xfce4-session-settings.glade: Re-enable a few widgets.
	* xfce4-session/xfsm-*-dbus.xml: Add ClientCSymbol annotations.

2008-10-19	Brian Tarricone <bjt23@cornell.edu>

	* settings/xfce4-session-settings.glade: Add/update a bunch of
	  tooltips.

2008-10-18	Brian Tarricone <bjt23@cornell.edu>

	* configure.in.in: Depend on newer version of libxfconf.
	* engines/*/Makefile.am: Link with libxfconf.
	* libxfsm/xfsm-splash-rc.*: Replace XfceRc usage with
	  XfconfChannel.
	* libxfsm/xfce4-session-2.0.pc.in: Add libxfconf-0 to required
	  packages list.
	* settings/{module.*,splash-settings.c]: Load XfconfChannel
	  with a property base instead of the old XfceRc file.
	* xfce4-session/xfsm-splash-screen.c: Fetch settings from
	  xfconf instead of rc file.

2008-10-17	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-chooser.c: Use xfce_create_mixed_button()
	  instead of xfsm_imgbtn_new() (bug 1446).
	* libxfsm/xfsm-utils.[ch]: Remove xfsm_imgbtn_new() and
	  xfsm_strv_copy().

2008-10-17	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: Don't ditch clients that fail
	  to restart solely because fork() failed in xfce4-session.
