@@ -1,5 +1,12 @@
 2008-10-22	Brian Tarricone <bjt23@cornell.edu>
 
+	* settings/session-editor.c: Display PID in session editor.
+	  Display restart style in session editor, and allow user to
+	  change the value (is there a way to actually make it look
+	  like a combo box?).
+
+2008-10-22	Brian Tarricone <bjt23@cornell.edu>
+
 	* xfce4-session/xfsm-client.c: Handle the SmProcessID property
 	  correctly.
 
